[package]
name = "s3-deletion-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
image = "0.24.3"
serde = { version = "1.0.144", features = ["derive"] }
structopt = "0.3.26"
flate2 = "1.0.24"
serde_json = "1.0.85"
chrono = { version = "0.4.22", features = ["serde"] }
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
simple_logger = "2.3.0"
itertools = "0.10.3"
imageproc = "0.23.0"
rusttype = "0.9.2"
fast_image_resize = "1.0.0"
num-format = "0.4.0"
